Fix add-opens for java.util.zip; add distributionSha256Sum to gradle.properties.