@@ -1,5 +1,5 @@
 /*
- * Copyright 2014-2020 the original author or authors.
+ * Copyright 2014-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -40,7 +40,6 @@ import java.util.zip.Deflater;
 import org.apache.commons.logging.Log;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 
@@ -89,7 +88,6 @@ import com.rabbitmq.client.ConnectionFactory;
  *
  */
 @RabbitAvailable(queues = BatchingRabbitTemplateTests.ROUTE)
-@Disabled("--add-opens java.base/java.util.zip=ALL-UNNAMED works in the IDE, but not in gradle ")
 public class BatchingRabbitTemplateTests {
 
 	public static final String ROUTE = "test.queue.BatchingRabbitTemplateTests";
